💄 Feat: add a favicon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>Marvel Search Heroes</title>
 
+    <link rel="icon" type="image/png" href="/favicon.ico">
+
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap" rel="stylesheet"/>
   </head>
   <body>
